test/Debug/Errors/JavaStyleGenerics.k.proof
 - (error) (JavaStyleGenerics.k:1) expected expression after >
Q.E.D.
